; ModuleID = '/home/carl/AnghaBench/disque/deps/hiredis/extr_dict.c_dictReplace.c'
source_filename = "/home/carl/AnghaBench/disque/deps/hiredis/extr_dict.c_dictReplace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DICT_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @dictReplace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dictReplace(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i64 @dictAdd(i32* %10, i8* %11, i8* %12)
  %14 = load i64, i64* @DICT_OK, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %29

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32* @dictFind(i32* %18, i8* %19)
  store i32* %20, i32** %8, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %9, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 @dictSetHashVal(i32* %23, i32* %24, i8* %25)
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @dictFreeEntryVal(i32* %27, i32* %9)
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %17, %16
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i64 @dictAdd(i32*, i8*, i8*) #1

declare dso_local i32* @dictFind(i32*, i8*) #1

declare dso_local i32 @dictSetHashVal(i32*, i32*, i8*) #1

declare dso_local i32 @dictFreeEntryVal(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
